MLPAB-468: Content and flow updates (#212)

--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -15,181 +15,13 @@
         {{ tr .App "lpaDecisions" }}
       </h2>
 
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "typeOfLpa" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.Type }}
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "WhenTheLpaCanBeUsed" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.WhenCanTheLpaBeUsed }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App .WhenCanLpaBeUsedPath }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "whenTheLpaCanBeUsed" }}</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "whoAreTheAttorneys" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.AttorneysFullNames }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App .ChooseAttorneysPath }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourAttorneys" }}</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "howTheAttorneysMustWorkTogether" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.HowAttorneysMakeDecisions }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App .HowAttorneysMakeDecisionsPath }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden">{{ .Lpa.HowAttorneysMakeDecisionsDetails }}</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "whoIsTheReplacementAttorney" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            We haven't done this bit yet
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden">  we haven't done this bit yet</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "restrictions" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <p style="white-space: pre-line;">{{ .Lpa.Restrictions }}</p>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App .RestrictionsPath }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourRestrictions" }}</span>
-            </a>
-          </dd>
-        </div>
-      </dl>
+      {{ template "lpa-decisions" . }}
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-2">
         {{ tr .App "peopleNamedOnTheLpa" }}
       </h2>
 
-      <h3 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">
-        {{ tr .App "donor" }}
-      </h3>
-
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "name" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.You.FirstNames }} {{ .Lpa.You.LastName }}
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "dateOfBirth" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ formatDate .Lpa.You.DateOfBirth }}
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "email" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.You.Email }}
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "address" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <div>{{ .Lpa.You.Address.Line1 }}</div>
-            <div>{{ .Lpa.You.Address.Line2 }}</div>
-            <div>{{ .Lpa.You.Address.TownOrCity }}</div>
-            <div>{{ .Lpa.You.Address.Postcode }}</div>
-          </dd>
-        </div>
-      </dl>
-
-      <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
-        {{ tr .App "certificateProvider" }}
-      </h3>
-
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "name" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.CertificateProvider.FirstNames }} {{ .Lpa.CertificateProvider.LastName }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App .CertificatesProviderPath }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "certificateProvider") }}</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "email" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.CertificateProvider.Email }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App .CertificatesProviderPath }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ tr .App "certificateProviderEmail" }}</span>
-            </a>
-          </dd>
-        </div>
-      </dl>
-
-      <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
-        {{ tr .App "attorneys" }}
-      </h3>
-
-      {{ template "attorney-details" (listAttorneys .Lpa.Attorneys .App .AttorneyDetailsPath .AttorneyAddressPath .RemoveAttorneyPath) }}
-
-      <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
-        {{ tr .App "replacementAttorney" }}
-      </h3>
-
-      {{ template "attorney-details" (listAttorneys .Lpa.ReplacementAttorneys .App .ReplacementAttorneyDetailsPath .ReplacementAttorneyAddressPath .RemoveReplacementAttorneyPath) }}
+      {{ template "people-named-on-lpa" . }}
 
       <form novalidate method="post">
         <div class="govuk-form-group  {{ if index .Errors "checked" }}govuk-form-group--error{{ end }}">
