update banner for UR testing

--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -89,7 +89,7 @@
               beta
             </strong>
             <span class="govuk-phase-banner__text">
-              {{ trHtml .App "newServiceContent" }}
+              {{ trHtml .App "urModeContent" }}
             </span>
           </p>
         </div>
