switch from radio to checkboxes for how know CP

--- a/app/web/template/how_do_you_know_your_certificate_provider.gohtml
+++ b/app/web/template/how_do_you_know_your_certificate_provider.gohtml
@@ -10,51 +10,49 @@
           <div class="govuk-form-group {{ if index .Errors "how" }}govuk-form-group--error{{ end }} govuk-!-margin-bottom-6">
             {{ template "error-message" (errorMessage . "how") }}
 
-            <div class="govuk-checkboxes  {{ if index .Errors "how" }}govuk-checkboxes--error{{ end }}" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="f-how" name="how" type="checkbox" value="friend" {{ if contains "friend" .Form.How }}checked{{ end }}>
-                <label class="govuk-label govuk-checkboxes__label" for="f-how">
+            <div class="govuk-radios  {{ if index .Errors "how" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-how" name="how" type="radio" value="friend" {{ if eq "friend" .Form.How }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label" for="f-how">
                   {{ tr .App "friend" }}
                 </label>
               </div>
 
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="f-how-2" name="how" type="checkbox" value="neighbour" {{ if contains "neighbour" .Form.How }}checked{{ end }}>
-                <label class="govuk-label govuk-checkboxes__label" for="f-how-2">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-how-2" name="how" type="radio" value="neighbour" {{ if eq "neighbour" .Form.How }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label" for="f-how-2">
                   {{ tr .App "neighbour" }}
                 </label>
               </div>
 
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="f-how-3" name="how" type="checkbox" value="colleague" {{ if contains "colleague" .Form.How }}checked{{ end }}>
-                <label class="govuk-label govuk-checkboxes__label" for="f-how-3">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-how-3" name="how" type="radio" value="colleague" {{ if eq "colleague" .Form.How }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label" for="f-how-3">
                   {{ tr .App "colleague" }}
                 </label>
               </div>
 
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="f-how-4" name="how" type="checkbox" value="health-professional" {{ if contains "health-professional" .Form.How }}checked{{ end }}>
-                <label class="govuk-label govuk-checkboxes__label" for="f-how-4">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-how-4" name="how" type="radio" value="health-professional" {{ if eq "health-professional" .Form.How }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label" for="f-how-4">
                   {{ tr .App "healthProfessional" }}
                 </label>
               </div>
 
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="f-how-5" name="how" type="checkbox" value="legal-professional" {{ if contains "legal-professional" .Form.How }}checked{{ end }}>
-                <label class="govuk-label govuk-checkboxes__label" for="f-how-5">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-how-5" name="how" type="radio" value="legal-professional" {{ if eq "legal-professional" .Form.How }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label" for="f-how-5">
                   {{ tr .App "legalProfessional" }}
                 </label>
               </div>
 
-              <div class="govuk-checkboxes__divider">{{ tr .App "or" }}</div>
-
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="f-how-6" name="how" type="checkbox" value="other" {{ if contains "other" .Form.How }}checked{{ end }} data-aria-controls="conditional-how">
-                <label class="govuk-label govuk-checkboxes__label" for="f-how-6">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-how-6" name="how" type="radio" value="other" {{ if eq "other" .Form.How }}checked{{ end }} data-aria-controls="conditional-how">
+                <label class="govuk-label govuk-radios__label" for="f-how-6">
                   {{ tr .App "Other" }}
                 </label>
               </div>
-              <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-how">
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how">
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="f-description">
                     {{ tr .App "pleaseDescribe" }}
