--- a/app/web/template/layout/lpa-decisions.gohtml
+++ b/app/web/template/layout/lpa-decisions.gohtml
@@ -25,7 +25,7 @@
 
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-                {{ tr .App "whoAreTheAttorneys" }}
+                {{ trCount .App "whoAreTheAttorneys" (len .Lpa.Attorneys) }}
             </dt>
             <dd class="govuk-summary-list__value">
                 {{ .Lpa.AttorneysFullNames }}
@@ -55,10 +55,14 @@
 
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-                {{ tr .App "whoIsTheReplacementAttorney" }}
+                {{ trCount .App "whoAreTheReplacementAttorneys" (len .Lpa.ReplacementAttorneys) }}
             </dt>
             <dd class="govuk-summary-list__value">
-                {{ .Lpa.ReplacementAttorneysFullNames }}
+                {{ if eq 0 (len .Lpa.ReplacementAttorneys) }}
+                    {{ tr .App "replacementAttorneysNotAppointed" }}
+                {{ else }}
+                    {{ .Lpa.ReplacementAttorneysFullNames }}
+                {{ end }}
             </dd>
             <dd class="govuk-summary-list__actions">
                 <a class="govuk-link" href="{{ link .App .ReplacementAttorneyDetailsPath }}">
