--- a/app/web/template/layout/certificate-provider-details.gohtml
+++ b/app/web/template/layout/certificate-provider-details.gohtml
@@ -8,7 +8,7 @@
                 {{ .Lpa.CertificateProvider.FirstNames }} {{ .Lpa.CertificateProvider.LastName }}
             </dd>
             <dd class="govuk-summary-list__actions">
-                <a class="govuk-link" href="{{ link .App .CertificatesProviderPath }}">
+                <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
                     {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "certificateProvider") }}</span>
                 </a>
             </dd>
@@ -22,7 +22,7 @@
                 {{ .Lpa.CertificateProvider.Email }}
             </dd>
             <dd class="govuk-summary-list__actions">
-                <a class="govuk-link" href="{{ link .App .CertificatesProviderPath }}">
+                <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
                     {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ tr .App "certificateProviderEmail" }}</span>
                 </a>
             </dd>
