--- a/app/web/template/layout/people-named-on-lpa.gohtml
+++ b/app/web/template/layout/people-named-on-lpa.gohtml
@@ -17,9 +17,20 @@
 
     {{ template "attorney-details" (listAttorneys .Lpa.Attorneys .App .App.Paths.ChooseAttorneys .App.Paths.ChooseAttorneysAddress .App.Paths.RemoveAttorney) }}
 
-    <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
-        {{ tr .App "replacementAttorneys" }}
-    </h3>
 
-    {{ template "attorney-details" (listAttorneys .Lpa.ReplacementAttorneys .App .App.Paths.ChooseReplacementAttorneys .App.Paths.ChooseReplacementAttorneysAddress .App.Paths.RemoveReplacementAttorney) }}
+    {{ if gt (len .Lpa.ReplacementAttorneys) 0 }}
+        <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
+            {{ tr .App "replacementAttorneys" }}
+        </h3>
+
+        {{ template "attorney-details" (listAttorneys .Lpa.ReplacementAttorneys .App .App.Paths.ChooseReplacementAttorneys .App.Paths.ChooseReplacementAttorneysAddress .App.Paths.RemoveReplacementAttorney) }}
+    {{ end }}
+
+    {{ if gt (len .Lpa.PeopleToNotify) 0  }}
+        <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
+            {{ tr .App "peopleToNotify" }}
+        </h3>
+
+        {{ template "people-to-notify-summary" (listPeopleToNotify .Lpa.PeopleToNotify .App .App.Paths.ChoosePeopleToNotify .App.Paths.ChoosePeopleToNotifyAddress .App.Paths.RemovePersonToNotify) }}
+    {{ end }}
 {{ end }}
