--- a/app/web/template/how_should_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_attorneys_make_decisions.gohtml
@@ -13,10 +13,6 @@
 
             <form novalidate method="post">
                 <div class="govuk-form-group">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        {{ tr .App "howShouldAttorneysMakeDecisions" }}
-                    </legend>
-
                     <div class="govuk-form-group {{ if index .Errors "decision-type" }}govuk-form-group--error{{ end }}">
                         {{ template "error-message" (errorMessage . "decision-type") }}
 
@@ -24,31 +20,31 @@
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="f-decision-type" name="decision-type" type="radio" value="jointly-and-severally" aria-describedby="decision-type-item-hint" {{ if eq "jointly-and-severally" .Form.DecisionsType }}checked{{ end }}>
                                 <label class="govuk-label govuk-radios__label" for="f-decision-type">
-                                    {{ tr .App "jointlyAndSeverally" }}
+                                    {{ trFormat .App "jointlyAndSeverallyHumanised" "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
                                 </label>
 
                                 <div id="decision-type-item-hint" class="govuk-hint govuk-radios__hint">
-                                    {{ tr .App "jointlyAndSeverallyHintAttorneys" }}
+                                    {{ trFormatHtml .App "jointlyAndSeverallyHint" "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
                                 </div>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="f-decision-type-2" name="decision-type" type="radio" value="jointly" aria-describedby="decision-type-2-item-hint" {{ if eq "jointly" .Form.DecisionsType }}checked{{ end }}>
                                 <label class="govuk-label govuk-radios__label" for="f-decision-type-2">
-                                    {{ tr .App "jointly" }}
+                                    {{ trFormat .App "jointlyHumanised" "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
                                 </label>
 
                                 <div id="decision-type-2-item-hint" class="govuk-hint govuk-radios__hint">
-                                    {{ tr .App "jointlyHintAttorneys" }}
+                                    {{ trFormatHtml .App "jointlyHintAttorneys" "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
                                 </div>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="f-decision-type-3" name="decision-type" type="radio" value="mixed" aria-describedby="decision-type-3-item-hint" aria-controls="decision-type-3-conditional-div" {{ if or (eq "mixed" .Form.DecisionsType) (index .Errors "mixed-details") }}checked{{ end }}>
                                 <label class="govuk-label govuk-radios__label" for="f-decision-type-3">
-                                    {{ tr .App "jointlyAndSeverallyMixed" }}
+                                    {{ trFormat .App "jointlyAndSeverallyMixedHumanised" "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
                                 </label>
 
                                 <div id="decision-type-3-item-hint" class="govuk-hint govuk-radios__hint">
-                                    {{ tr .App "jointlyAndSeverallyMixedHintAttorneys" }}
+                                    {{ trFormatHtml .App "jointlyAndSeverallyMixedHint" "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
                                 </div>
 
                                 <div class="govuk-radios__conditional" id="decision-type-3-conditional-div">
