--- a/app/web/template/do_you_want_replacement_attorneys.gohtml
+++ b/app/web/template/do_you_want_replacement_attorneys.gohtml
@@ -14,6 +14,8 @@
 
         <p class="govuk-body">{{ tr .App "replacementAttorneyRequirements" }}</p>
 
+        {{ trHtml .App "findOutMoreAboutReplacementAttorneysContent" }}
+
         <div>
           {{ if eq .Lpa.HowAttorneysMakeDecisions "jointly" }}
             {{ template "warning" (warning .App "jointlyReplacementWarning") }}
@@ -27,8 +29,8 @@
             {{ template "error-message" (errorMessage . "want") }}
 
             {{ template "radios" (items . "want" .Want
-            (item "yes" "yes")
-            (item "no" "no")
+            (item "yes" "yesReplacementAttorneys")
+            (item "no" "noReplacementAttorneys")
             ) }}
           </div>
 
