--- a/app/web/template/remove_replacement_attorney.gohtml
+++ b/app/web/template/remove_replacement_attorney.gohtml
@@ -3,14 +3,10 @@
 {{ define "main" }}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">{{ tr .App "removeAReplacementAttorney" }}</h1>
+        <h1 class="govuk-heading-xl">{{ trFormat .App "doYouWantToRemove" "FirstNames" .Attorney.FirstNames "LastName" .Attorney.LastName }}</h1>
 
         <form novalidate method="post">
             <div class="govuk-form-group">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                    {{ trFormat .App "doYouWantToRemove" "FirstNames" .Attorney.FirstNames "LastName" .Attorney.LastName }}
-                </legend>
-
                 <div class="govuk-form-group {{ if index .Errors "remove-attorney" }}govuk-form-group--error{{ end }}">
                     {{ template "error-message" (errorMessage . "remove-attorney") }}
 
