--- a/app/web/template/when_can_the_lpa_be_used.gohtml
+++ b/app/web/template/when_can_the_lpa_be_used.gohtml
@@ -14,6 +14,8 @@
         {{ trFormatHtml .App "asSoonAsRegisteredContent" "AttorneysFirstNames" .Lpa.AttorneysFirstNames }}
         {{ trFormatHtml .App "afterLosingCapacityContent" "AttorneysFirstNames" .Lpa.AttorneysFirstNames }}
 
+        <p class="govuk-body">{{ trFormatCount .App "afterLosingCapacityExample" (len .Lpa.Attorneys) "AttorneysFirstNames" .Lpa.AttorneysFirstNames }}</p>
+
         <div class="govuk-form-group {{ if index .Errors "when" }}govuk-form-group--error{{ end }}">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
