make check lpa attorney decision choice friendlier and change button to confirm

--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -58,7 +58,7 @@
           </strong>
         </div>
 
-        {{ template "continue-button" . }}
+        <button type="submit" class="govuk-button" data-module="govuk-button">{{ tr .App "confirm" }}</button>
       </form>
     </div>
   </div>
