--- a/app/web/template/how_should_replacement_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_replacement_attorneys_make_decisions.gohtml
@@ -24,7 +24,7 @@
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="f-decision-type" name="decision-type" type="radio" value="jointly-and-severally" aria-describedby="decision-type-item-hint" {{ if eq "jointly-and-severally" .Form.DecisionsType }}checked{{ end }}>
                                 <label class="govuk-label govuk-radios__label" for="f-decision-type">
-                                    {{ tr .App "jointlyAndSeverally" }}
+                                    {{ tr .App "jointlyAndSeverallyHumanised" }}
                                 </label>
 
                                 <div id="decision-type-item-hint" class="govuk-hint govuk-radios__hint">
@@ -34,7 +34,7 @@
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="f-decision-type-2" name="decision-type" type="radio" value="jointly" aria-describedby="decision-type-2-item-hint" {{ if eq "jointly" .Form.DecisionsType }}checked{{ end }}>
                                 <label class="govuk-label govuk-radios__label" for="f-decision-type-2">
-                                    {{ tr .App "jointly" }}
+                                    {{ tr .App "jointlyHumanised" }}
                                 </label>
 
                                 <div id="decision-type-2-item-hint" class="govuk-hint govuk-radios__hint">
@@ -44,7 +44,7 @@
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="f-decision-type-3" name="decision-type" type="radio" value="mixed" aria-describedby="decision-type-3-item-hint" aria-controls="decision-type-3-conditional-div" {{ if or (eq "mixed" .Form.DecisionsType) (index .Errors "mixed-details") }}checked{{ end }}>
                                 <label class="govuk-label govuk-radios__label" for="f-decision-type-3">
-                                    {{ tr .App "jointlyAndSeverallyMixed" }}
+                                    {{ tr .App "jointlyAndSeverallyMixedHumanised" }}
                                 </label>
 
                                 <div id="decision-type-3-item-hint" class="govuk-hint govuk-radios__hint">
