--- a/app/web/template/dashboard.gohtml
+++ b/app/web/template/dashboard.gohtml
@@ -2,19 +2,47 @@
 
 {{ define "main" }}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">{{ tr .App "myLastingPowersOfAttorney" }}</h1>
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">{{ tr .App "myLastingPowersOfAttorney" }}</h1>
 
-      <div class="moj-ticket-panel moj-ticket-panel--inline">
-        <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
-          <strong class="moj-badge">{{ tr .App "signed" }}</strong>
-          <h2 class="govuk-heading-m govuk-!-margin-bottom-1">{{.Lpa.You.FirstNames}} {{.Lpa.You.LastName}}: {{ if eq "pfa" .Lpa.Type}}{{ tr .App "lpaTypePfa" }}{{ else }}{{ tr .App "lpaTypeHw" }}{{ end }}</h2>
-          <span class="govuk-hint"><strong>{{ tr .App "applicationNumber" }}:</strong> {{.Lpa.ID}}</span>
-          <div class="govuk-button-group">
-            <a class="govuk-link govuk-link--no-visited-state govuk-!-margin-bottom-0" href="#">{{ tr .App "viewTheLpaProgress" }}</a>
+      <p class="govuk-body">{{ tr .App "myLastingPowersOfAttorneyHint" }}</p>
+    </div>
+  </div>
+  
+  {{ if .Lpa.You.FirstNames }}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <p class="govuk-body">{{ tr .App "youCanCreateANewLpa" }}</p>
+        
+        <a class="govuk-button" href="{{ link .App .App.Paths.YourDetails }}">{{ tr .App "createAnotherLpa" }}</a>
+      </div>
+    </div>
+
+    <div class="govuk-grid-row govuk-!-margin-top-4">
+      <div class="govuk-grid-column-full">
+        <h2 class="govuk-heading-m">{{ tr .App "lpasInProgress" }}</h2>
+        
+        <div class="moj-ticket-panel moj-ticket-panel--inline">
+          <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
+            <strong class="moj-badge app-float-right govuk-!-margin-left-2">{{ tr .App "statusTag" }}</strong>
+            <p class="govuk-body app-float-right"><strong>{{ tr .App "lastSaved" }}:</strong> {{ formatDateTime .Lpa.UpdatedAt }}</p>
+            <h2 class="govuk-heading-m govuk-!-padding-top-0 govuk-!-margin-bottom-1">{{ if eq "pfa" .Lpa.Type }}{{ tr .App "lpaTypePfa" }}{{ else }}{{ tr .App "lpaTypeHw" }}{{ end }}: <span class="govuk-!-font-weight-regular">{{ .Lpa.You.FirstNames }} {{ .Lpa.You.LastName }}</span></h2>
+            <span class="govuk-hint"><strong>{{ tr .App "applicationNumber" }}:</strong> {{ .Lpa.ID }}</span>
+            <div class="govuk-button-group govuk-!-margin-top-4">
+              <a class="govuk-button" href="{{ link .App .App.Paths.TaskList }}">{{ tr .App "continue" }}</a>
+              <a class="govuk-button govuk-button--secondary" href="#">{{ tr .App "options" }}</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  {{ else }}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <p class="govuk-body">{{ tr .App "createYourFirstLpa" }}</p>
+
+        <a class="govuk-button" href="{{ link .App .App.Paths.YourDetails }}">{{ tr .App "createAnLpa" }}</a>
+      </div>
+    </div>
+  {{ end }}
 {{ end }}
