revert check_your_lpa

--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -9,8 +9,7 @@
     </div>
 
     <div class="govuk-grid-column-two-thirds">
-      {{ template "warning" (warning .App "readAndCheckYourLpa") }}
-      {{ template "details" (details . "whatIfIWantToMakeChanges" "whatIfIWantToMakeChangesContent" false) }}
+      <p class="govuk-body">{{ tr .App "youveNowFinishedFillingInTheLpa" }}</p>
 
       <h2 id="decisions" class="govuk-heading-l govuk-!-margin-bottom-2">
         {{ tr .App "lpaDecisions" }}
