--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -3,33 +3,55 @@
 {{ define "main" }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <div class="govuk-panel govuk-panel--confirmation">
-                <h1 class="govuk-panel__title">
-                    {{ tr .App "signYourLpa" }}
-                </h1>
-            </div>
+            <h1 class="govuk-heading-xl">
+                {{ tr .App "signYourLpa" }}
+            </h1>
 
-            <h2 class="govuk-heading-m">Signing the LPA is an important and powerful legal step.</h2>
-            <p>When you do this you're officially saying that you want Pat Taylor and Jamie Taylor to be your finance and affairs attorneys.</p>
-            <p>This means that once the LPA has been registered, Pat and Jamie will have the legal power to:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>help you make a decision about your money or property, or make a decision for you if you do not have the mental capacity to make it yourself</li><li> deal with organisations, like banks and utility companies, on your behalf</li>
-            </ul>
+            {{ trFormatHtml .App "signYourLpaContent" "AllAttorneysFullNames" .Lpa.AttorneysFullNames "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames }}
+
             <div class="govuk-warning-text">
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    While you have mental capacity, Pat and Jamie can only do these things if you ask them to.
+                    <span class="govuk-warning-text__assistive">{{ tr .App "warning" }}</span>
+                    {{ trFormat .App "attorneysCanActOnlyIfAskedWarning" "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames }}
                 </strong>
             </div>
-            <p>They must always follow the restrictions you made in your LPA and the rules set out in the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921428/Mental-capacity-act-code-of-practice.pdf">Mental Capacity Act and code of practice.</a></p>
 
-            <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What happens if I want to make changes after I've signed?
-                    </span>
-                </summary>
-            </details>
+            {{ trFormatHtml .App "attorneysMustFollowMCA" }}
+
+            {{ template "details" (details . "whatHappensIfIWantToMakeChanges" "whatHappensIfIWantToMakeChangesContent" false) }}
+
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+            {{ trHtml .App "formPanelContent" }}
+
+            <form novalidate method="post">
+                <article class="moj-ticket-panel" aria-label="Sub navigation 1">
+                    <section class="moj-ticket-panel__content moj-ticket-panel__content--blue" aria-label="Section 1">
+                        <p class="govuk-body govuk-!-font-weight-bold">
+                            {{ trFormat .App "iConfirmThat" "DonorFullName" .Lpa.DonorFullName }}
+                        </p>
+
+                        {{ template "error-message" (errorMessage . "sign-lpa") }}
+
+                        {{ $wantToApplyRawLabel := trFormat .App "cpIsWitnessingMeSign" "CertificateProviderFullName" .Lpa.CertificateProviderFullName }}
+
+                        {{ template "checkboxes" (items . "sign-lpa" .Form.DonorSignatures
+                        (item "cp-witnessed" "cpIsWitnessingMeSign" "rawLabel" $wantToApplyRawLabel)
+                        (item "want-to-apply" "wantToApply")
+                        ) }}
+
+                    </section>
+                </article>
+
+                {{ template "details" (details . "readMoreDigitalSignatures" "readMoreDigitalSignaturesContent" false) }}
+
+                <div class="govuk-button-group">
+                    <button class="govuk-button" data-module="govuk-button">
+                        {{ tr .App "submitSignature" }}
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 {{ end }}
