--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -26,8 +26,8 @@
             {{ trHtml .App "formPanelContent" }}
 
             <form novalidate method="post">
-                <article class="moj-ticket-panel" aria-label="Sub navigation 1">
-                    <section class="moj-ticket-panel__content moj-ticket-panel__content--blue" aria-label="Section 1">
+                <div class="moj-ticket-panel">
+                    <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
                         <p class="govuk-body govuk-!-font-weight-bold">
                             {{ trFormat .App "iConfirmThat" "DonorFullName" .Lpa.DonorFullName }}
                         </p>
@@ -41,8 +41,8 @@
                         (item "want-to-apply" "wantToApply")
                         ) }}
 
-                    </section>
-                </article>
+                    </div>
+                </div>
 
                 {{ template "details" (details . "readMoreDigitalSignatures" "readMoreDigitalSignaturesContent" false) }}
 
