--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -10,8 +10,7 @@
             {{ trFormatHtml .App "signYourLpaHeader" }}
 
             <p class="govuk-body govuk-!-font-weight-bold">
-                {{ $lpaTypeTranslated := tr .App .Lpa.LpaLegalTerm }}
-                {{ trFormatCount .App "wantAttorneysToBeAppointed" (len .Lpa.Attorneys) "AllAttorneysFullNames" .Lpa.AttorneysFullNames "LpaType" $lpaTypeTranslated }}
+                {{ trFormatCount .App "wantAttorneysToBeAppointed" (len .Lpa.Attorneys) "AllAttorneysFullNames" .Lpa.AttorneysFullNames "LpaType" (tr .App .Lpa.LpaLegalTermTransKey) }}
             </p>
 
             {{ if eq .Lpa.Type "pfa" }}
