--- a/app/web/template/certificate_provider_details.gohtml
+++ b/app/web/template/certificate_provider_details.gohtml
@@ -15,9 +15,10 @@
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email") }}
+            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "classes" "govuk-input--width-20" "type" "tel") }}
 
             <p class="govuk-body">{{ tr .App "certificateProviderDobHint" }}
-            
+
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
             {{ template "continue-button" . }}
