--- a/app/web/template/witnessing_your_signature.gohtml
+++ b/app/web/template/witnessing_your_signature.gohtml
@@ -3,11 +3,12 @@
 {{ define "main" }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            {{ tr .App "witnessYourSignatureHeader" }}
+            {{ trHtml .App "witnessYourSignatureHeader" }}
 
-            {{ trFormatHtml .App "witnessYourSignatureContent" "CpFullName" .Lpa.CpFullName "CpFirstNames" .Lpa.CpFirstNames }}
+            {{ trFormatHtml .App "witnessYourSignatureContent" "CpFullName" .Lpa.CertificateProviderFullName "CpFirstNames" .Lpa.CertificateProvider.FirstNames }}
 
-            {{ template "warning" (warning .App "witnessCodeTimeWarning")  }}
+            {{ $warningContent := trFormat .App "witnessCodeTimeWarning" "CpFirstNames" .Lpa.CertificateProvider.FirstNames }}
+            {{ template "warning" (warning .App $warningContent)  }}
 
             <form novalidate method="post">
                 <div class="govuk-button-group">
